--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -9,6 +9,9 @@ $button-hover-border-color: none;
 $button-padding-vertical: 1em;
 
 $title-family: "geomanistultra", serif;
+$button-family: "geomanistultra", serif;
+
+$size-1: 5rem;
 
 $text: #1d1d1d;
 $primary: #1d1d1d;
